fix more deprecated method calls